ec2.yml
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 10.0.0.0/16
        EnableDnsSupport: 'true'
        EnableDnsHostnames: 'true'
        Tags:
        - Key: name
          Value: vpc-reto

    InternetGateway:
      Type: AWS::EC2::InternetGateway

    AttachGateway:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref InternetGateway

    RouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC

    Route:
      Type: AWS::EC2::Route
      DependsOn: AttachGateway
      Properties:
        RouteTableId: !Ref RouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway

    Subnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        CidrBlock: 10.0.1.0/24
        MapPublicIpOnLaunch: true

    SubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref Subnet
        RouteTableId: !Ref RouteTable

    GrupoSeguridadApacheReto:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Grupo de Seguridad de Apache para el reto
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 8000
            ToPort: 8000
            CidrIp: 0.0.0.0/0

    instanciaApacheReto:
     Type: AWS::EC2::Instance
     Properties: 
        ImageId: ami-04b4f1a9cf54c11d0
        InstanceType: t2.micro
        KeyName: KeyJenkins
        SubnetId: !Ref Subnet
        SecurityGroupIds:
          - !Ref GrupoSeguridadApacheReto
        Tags:
          - Key: Name
            Value: instanciaApacheReto

        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            apt-get update -y
            apt-get upgrade -y
            apt-get install -y apt-transport-https ca-certificates curl software-properties-common
            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable"
            sudo apt-get update -y
            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
            sudo systemctl start docker
            sudo systemctl enable docker
            git clone https://github.com/gsanchezcr/RetoNube.git
            cd RetoNube
            docker compose up -d 
            sudo apt-get install openjdk-17-jre -y
